[gd_scene load_steps=19 format=2]

[ext_resource path="res://NPCs/visuals/girl1.png" type="Texture" id=1]
[ext_resource path="res://FX/loveHeart.png" type="Texture" id=2]
[ext_resource path="res://Audio/01-Pavement Walking_ man starts & stops.wav" type="AudioStream" id=3]
[ext_resource path="E:/FONTBASE/Handwritingy/Gaegu-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://NPCs/visuals/NPCFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://NPCs/NPC.gd" type="Script" id=6]
[ext_resource path="res://NPCs/NPCBody.gd" type="Script" id=7]
[ext_resource path="res://NPCs/NPCData/MyEmotions.gd" type="Script" id=8]
[ext_resource path="res://NPCs/NPCData/MyRelationships.gd" type="Script" id=9]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.396818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
render_priority = -1
emission_shape = 1
emission_sphere_radius = 112.81
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 18.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale_curve = SubResource( 3 )
anim_speed = 1.56

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
use_filter = true
extra_spacing_char = -3
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="CapsuleShape2D" id=8]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 30, 100 )

[node name="CharacterName" type="Node2D"]
position = Vector2( -0.594604, 0 )
z_index = 1
script = ExtResource( 6 )

[node name="MyEmotions" type="Node" parent="."]
script = ExtResource( 8 )

[node name="MyRelationships" type="Node" parent="."]
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": "first relationship is always with yourself"
}

[node name="NPCBody" type="KinematicBody2D" parent="."]
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NPCBody"]

[node name="NameLabel" type="RichTextLabel" parent="NPCBody"]
margin_left = 51.446
margin_top = -180.07
margin_right = 451.446
margin_bottom = -77.0704
custom_fonts/normal_font = ExtResource( 5 )
meta_underlined = false
text = "CharacterName"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="NPCBody"]
material = SubResource( 1 )
position = Vector2( 2.75256, -106.49 )
z_index = -1
emitting = false
amount = 20
lifetime = 10.0
explosiveness = 0.28
randomness = 0.25
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="StrongestEmotion" type="Label" parent="NPCBody"]
margin_left = 55.7727
margin_top = -96.4826
margin_right = 237.773
margin_bottom = -65.4826
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Strongest Emotion:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmotionLabel" type="Label" parent="NPCBody"]
margin_left = 239.229
margin_top = -98.0251
margin_right = 359.229
margin_bottom = -67.0251
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
text = "Happiness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feetCollision" type="CollisionShape2D" parent="NPCBody"]
rotation = 1.5708
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="NPCBody"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
offset = Vector2( 0, -240 )

[node name="fullBodyArea" type="Area2D" parent="NPCBody"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPCBody/fullBodyArea"]
position = Vector2( -0.958615, -96.5622 )
shape = SubResource( 9 )

[node name="Line2D" type="Line2D" parent="NPCBody"]
z_index = 100
z_as_relative = false
width = 20.0

[node name="Audio" type="Node2D" parent="NPCBody"]

[node name="Footsteps" type="AudioStreamPlayer2D" parent="NPCBody/Audio"]
stream = ExtResource( 3 )
max_distance = 200.0

[node name="Talk" type="AudioStreamPlayer2D" parent="NPCBody/Audio"]

[connection signal="renamed" from="." to="." method="_on_renamed"]
[connection signal="tree_entered" from="." to="." method="_on_CharacterName_tree_entered"]
